refactor: landing, gestion raids

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -10,7 +10,7 @@
                 <a href={{ path('landing') }}>Accueil</a>
             <li>
             <li>
-                <a href={{ path('inviter') }}>Inviter bénévole</a>
+                <a href={{ path('landing_invitation') }}>Inviter bénévole</a>
             </li>
             <li style="background-color: #80BA75">
                 <a href={{ path('landing_gerer_raid') }}>Gérer mes Raids</a>
