--- a/app/Resources/views/raid/new.html.twig
+++ b/app/Resources/views/raid/new.html.twig
@@ -32,27 +32,15 @@
                         </div>
                     </div>
 
-                   {# <div class="form-row mb-4">
+                    <div class="form-row mb-4">
                         <div class="col">
-                            {{ form_row(raid.nbrSport, {'attr': {'class': 'form-control'}}) }}
+                            {{ form_row(raid.equipe, {'attr': {'class': 'form-control'}}) }}
                         </div>
                     </div>
 
                     <div class="form-row mb-4">
                         <div class="col">
-                            {{ form_row(raid.typeSport, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div> 
-
-                    <div class="form-row mb-4">
-                        <div class="col">
-                            {{ form_row(raid.typeSurface, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div> #}
-
-                    <div class="form-row mb-4">
-                        <div class="col">
-                            {{ form_row(raid.equipe, {'attr': {'class': 'form-control'}}) }}
+                            {{ form_row(raid.visibility, {'attr': {'class': 'form-control'}}) }}
                         </div>
                     </div>
 
