feat: send invitation to participate as benevole to a raid

--- a/app/Resources/views/landing/inviterBenevole.html.twig
+++ b/app/Resources/views/landing/inviterBenevole.html.twig
@@ -4,7 +4,7 @@
 <div class='vertical-center'>
     <div class="container col col-md-4">
         <div class="card default-color-dark ">
-            {{ form_start(form) }}
+            {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
                 <p class="h4 mb-2 text-center">Inviter des bénévoles</p>
 
                 <div class="form-row mb-4">
