refactor: carte controller and design mainly

--- a/app/Resources/views/gestion/edit_organisateurs.html.twig
+++ b/app/Resources/views/gestion/edit_organisateurs.html.twig
@@ -19,9 +19,8 @@
       {% endif %}
     </ul>
 
-    
     <div class='vertical-center'>
-        <div class="container col col-md-4">
+        <div class="container col">
             <div class="card default-color-dark ">
                 {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
                     <p class="h4 mb-2 text-center">Ajouter un organisateur</p>
