--- a/app/Resources/views/landing/gestionRaid.html.twig
+++ b/app/Resources/views/landing/gestionRaid.html.twig
@@ -8,18 +8,14 @@
 
   <ul class="list-group flexcolumn">
   {% for raid in raids_organisateurs %}
-    <li class="list-group-item text-left">
+    <li class="list-group-item d-flex justify-content-between align-items-center">
       {{raid.nom}}
-      <a href= {{ path('gestion_raid_description', {'id_raid': raid.id }) }}>
-        Editer
-      </a>
-      <a href= {{ path('gestion_raid_organisateurs', {'id_raid': raid.id }) }}>
-        Gérer les organisateurs
-      </a>
+      <div>
+        <a href= {{ path('gestion_raid_description', {'id_raid': raid.id }) }}>Editer</a>
+        <a href= {{ path('gestion_raid_organisateurs', {'id_raid': raid.id }) }}>Gérer les organisateurs</a>
+      </div>
     </li>
   {% endfor %}
   </ul>
-
-
 </div>
 {% endblock %}
