--- a/app/Resources/views/landing/adminBenevole.html.twig
+++ b/app/Resources/views/landing/adminBenevole.html.twig
@@ -3,14 +3,15 @@
 {% block content %}
 
 <div class="container">
-  <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant qu'organisateur {{user.name}} : Gestion des bénévoles</button>
+  <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant qu'organisateur {{user.username}} : Gestion des bénévoles</button>
   <br/>
 
   <ul class="list-group flexcolumn">
   {% for raid in raids_organisateurs %}
+{#  {{dump(raid)}} #}
     <li class="list-group-item text-left">
       {{raid.nom}}
-      <a href= {{ path('choix_benevole_orga', {'id': raid.idRaid,'id2':raid.idUser }) }}>
+     <a href= {{ path('choix_benevole_orga', {'idRaid': raid.id }) }}>
         Gérer!
         <span class="glyphicon glyphicon-plus"></span>
       </a>
