--- a/app/Resources/views/gestion/edit_organisateurs.html.twig
+++ b/app/Resources/views/gestion/edit_organisateurs.html.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<div class="container col col-md-6">
     <h2>Membres organisateurs du RAID :</h2>
     <ul class="list-group">
     {% if organisateurs != null %}
@@ -19,33 +20,30 @@
       {% endif %}
     </ul>
 
-    <div class='vertical-center'>
-        <div class="container col">
-            <div class="card default-color-dark ">
-                {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
-                    <p class="h4 mb-2 text-center">Ajouter un organisateur</p>
+    <div class="card default-color-dark">
+        {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
+            <p class="h4 mb-2 text-center">Ajouter un organisateur</p>
 
-                    <div class="form-row mb-4">
-                        <div class="col">
-                            {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-
-                    {% if errors %}
-                        <div> 
-                            <b style="color:red">{{ errors }}</b>
-                        </div>
-                    {% endif %}
-                    <div class="form-row mb-4">
-                        <div class="col">
-                            <button class="btn btn-info my-4 btn-block" type="submit">Confirmer</button>
-                        </div>
-                        <div class="col">
-                            <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
-                        </div>
-                    </div>
-                {{ form_end(form) }}
+            <div class="form-row mb-4">
+                <div class="col">
+                    {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+                </div>
             </div>
-        </div>
+
+            {% if errors %}
+                <div> 
+                    <b style="color:red">{{ errors }}</b>
+                </div>
+            {% endif %}
+            <div class="form-row mb-4">
+                <div class="col">
+                    <button class="btn btn-info my-4 btn-block" type="submit">Confirmer</button>
+                </div>
+                <div class="col">
+                    <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
+                </div>
+            </div>
+        {{ form_end(form) }}
     </div>
+</div>
 {% endblock %}
