--- a/app/Resources/views/landing/index.html.twig
+++ b/app/Resources/views/landing/index.html.twig
@@ -10,7 +10,10 @@
     {% if raids_organisateurs != null %}
       {% for raid in raids_organisateurs %}
         <a href= {{ path('edit_raid', {'id': raid.id} ) }}>
-          <li class="list-group-item">{{raid.nom}}</li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            {{raid.nom}}
+            <span>{{raid.date|date('d/m/Y') }} à {{raid.date|date('H:i', "Europe/Paris") }}</span>
+          </li>
         </a>
       {% endfor %}
     {% else %}
@@ -29,9 +32,10 @@
     <ul class="list-group">
     {% if raids_benevoles != null %}
       {% for raid in raids_benevoles %}
-      {#  <a href= {{ path('create_raid') }}> #}
-          <li class="list-group-item">{{raid.nom}}</li>
-        {# </a> #}
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            {{raid.nom}}
+            <span>{{raid.date|date('d/m/Y') }}</span>
+          </li>
       {% endfor %}
     {% else %}
       <p>Vous n'êtes bénévoles d'aucun RAID pour le moment.</p>
@@ -44,8 +48,8 @@
     <ul class="list-group flexcolumn">
       {% if all_raids != null %}
         {% for raid in all_raids %}
-          <li class="list-group-item raid-row text-left">
-            {{raid.nom}}
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            {{raid.nom}} le {{raid.date|date('d/m/Y') }} à {{raid.date|date('H:i', "Europe/Paris") }}
             <a href= {{ path('rejoindre_raid_comme_benevole', {'id_raid': raid.id}) }}>
               Rejoins-nous!
               <span class="glyphicon glyphicon-plus"></span>
