--- a/app/Resources/views/raid/postes_benevoles.html.twig
+++ b/app/Resources/views/raid/postes_benevoles.html.twig
@@ -18,7 +18,7 @@
                 </li>
         {% endfor %}
 {%else%}
-      Vous n'êtes pas encore choisi pour un poste.
+      Vous n'êtes pas encore choisi pour un poste
         <div>
             <button>
             <a href="{{ path('landing') }}">Retour à la page d'accueil </a>
