--- a/app/Resources/views/default/map_interactive.html.twig
+++ b/app/Resources/views/default/map_interactive.html.twig
@@ -17,6 +17,7 @@
     {{ parent() }}
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
     <script src="{{asset('js/leaflet-toolbar/dist/leaflet.toolbar.js')}}"></script>
+    <script src="{{asset('js/Leaflet.Editable.js')}}"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
@@ -27,5 +28,5 @@
 
 
 {% block content %}
-    <div id="mapid" data-token={{token}} data-trace={{trace}}></div>
+    <div id="mapid" data-token={{token}} data-idparcours={{idparcours}}></div>
 {% endblock %}
