feat: ajout du loader

--- a/app/Resources/views/default/map_interactive.html.twig
+++ b/app/Resources/views/default/map_interactive.html.twig
@@ -31,5 +31,10 @@
 
 
 {% block content %}
-    <div id="mapid" data-token={{token}} data-idparcours={{idparcours}}></div>
+    <div id="mapid" data-token={{token}} data-idparcours={{idparcours}}>
+        <!-- Image loader -->
+        <div id='loader'>
+            <img src={{asset('images/loader.gif')}}>
+        </div>
+    </div>
 {% endblock %}
