--- a/web/css/own_style_sed.css
+++ b/web/css/own_style_sed.css
@@ -27,3 +27,21 @@
 .raid-row {
     padding:3rem !important;
 }
+
+#loader {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(245, 245, 245, 0.7);
+    z-index: 1000;
+}
+
+#loader img {
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -60px 0 0 -60px;
+}
