--- a/app/Resources/views/landing/index.html.twig
+++ b/app/Resources/views/landing/index.html.twig
@@ -59,7 +59,7 @@
         </li>
       {% endfor %}
       {% else %}
-        <p>Aucun RAID enregistré.</p>
+        <p>Aucun RAID à venir.</p>
       {% endif %}
     </ul>
   </section>
