--- a/app/Resources/views/parcours/new.html.twig
+++ b/app/Resources/views/parcours/new.html.twig
@@ -2,35 +2,41 @@
 
 {% block content %}
 <div class='vertical-center'>
-    <div class="container col col-md-4">
-        <div class="card default-color-dark ">
-            {{ form_start(form, {'attr': {'class': 'center border border-light p-5 '}}) }}
-                <p class="h4 mb-2 text-center">Création d'un parcours</p>
-                
-                <div class="form-row mb-4">
-                    <div class="col">
-                        {{ form_row(form.nom, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                </div>
 
-                <div class="form-row mb-4">
-                    <div class="col">
-                        {{ form_row(form.type, {'attr': {'class': 'form-control'}}) }}
+    {% if est_organisateur %}
+        <div class="container col col-md-4">
+            <div class="card default-color-dark ">
+                {{ form_start(form, {'attr': {'class': 'center border border-light p-5 '}}) }}
+                    <p class="h4 mb-2 text-center">Création d'un parcours</p>
+                    
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(form.nom, {'attr': {'class': 'form-control'}}) }}
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-row mb-4">
-                    <div class="col">
-                        <button class="btn btn-info my-4 btn-block" type="submit">Créer un parcours</button>
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(form.type, {'attr': {'class': 'form-control'}}) }}
+                        </div>
                     </div>
-                    <div class="col">
-                        <a href={{ path('landing') }}>
-                            <button class="btn btn-info my-4 btn-block">Annuler</button>
-                        </a>
+
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            <button class="btn btn-info my-4 btn-block" type="submit">Créer un parcours</button>
+                        </div>
+                        <div class="col">
+                            <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
+                        </div>
                     </div>
-                </div>
-            {{ form_end(form) }}
+                {{ form_end(form) }}
+            </div>
         </div>
-    </div>
+    {% else %}
+        <div class="alert alert-danger" role="alert">
+            Vous n'êtes pas organisateur de ce RAID.<br>
+            Merci de vous adressez à un des organisateurs pour accéder à cette page
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
